Added reset stylesheet to remove borders

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   -->
   <head>
 
+    <style>
+     *:focus {
+  outline: none;
+}
+    </style>
     <title>PyTetris (Pyjamas Auto-Generated HTML file)</title>
     <meta name="pygwt:module" content="PyTetris">
-    <link rel="stylesheet" type="text/css" href="/css/reset.css"/>
   </head>
   <body style="background-color:none transparent">
     <script type="text/javascript" src="bootstrap.js"></script>
