Added nozoom and css reset

--- a/output/index.html
+++ b/output/index.html
@@ -7,7 +7,8 @@
 
     <title>PyTetris (Pyjamas Auto-Generated HTML file)</title>
     <meta name="pygwt:module" content="PyTetris">
-    <link rel="stylesheet" type="text/css" href="/css/reset.css"/>
+    <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+    <script type="text/javascript" src="library/nozoom.js"></script>
   </head>
   <body style="background-color:none transparent">
     <script type="text/javascript" src="bootstrap.js"></script>
