--- a/output/PyTetris.nocache.html
+++ b/output/PyTetris.nocache.html
@@ -1,4 +1,5 @@
 <html><head>
+  <meta charset="UTF-8">
   <meta http-equiv="PRAGMA" content="NO-CACHE">
   <meta http-equiv="EXPIRES" content="-1">
     <script type="text/javascript">window["provider$user.agent"]=function(){var a=navigator.userAgent.toLowerCase();if(-1!=a.indexOf("opera"))return"opera";if(-1!=a.indexOf("safari"))return"safari";if(-1!=a.indexOf("msie 6.0")||-1!=a.indexOf("msie 7.0")||-1!=a.indexOf("msie7.0")||-1!=a.indexOf("msie 8.0")||-1!=a.indexOf("msie 9.0")||-1!=a.indexOf("msie 10.0"))return"ie6";if(-1!=a.indexOf("mozilla")){var d=a.indexOf("gecko/");if(-1==d)return"oldmoz";var b=a.indexOf(" ",d);-1==b&&(b=a.length);var c=/rv:([0-9]+)\.([0-9]+)/.exec(a);return!c||
