--- a/output/index.html
+++ b/output/index.html
@@ -6,6 +6,7 @@
   <head>
 
     <title>PyTetris (Pyjamas Auto-Generated HTML file)</title>
+    <meta charset="UTF-8">
     <meta name="pygwt:module" content="PyTetris">
     <link rel="stylesheet" type="text/css" href="css/reset.css"/>
     <script type="text/javascript" src="library/nozoom.js"></script>
