Added safari compatibility (no user drag)

--- a/output/index.html
+++ b/output/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css"/>
     <script type="text/javascript" src="library/nozoom.js"></script>
   </head>
-  <body style="background-color:none transparent">
+  <body style="background-color:transparent; user-select: none; -webkit-user-select: none;">
     <script type="text/javascript" src="bootstrap.js"></script>
     <iframe id="__pygwt_historyFrame" style="display:none;"></iframe>
   </body>
